include/omapi.h


typedef unsigned long OM_DATETIME;
typedef enum
{
    OM_DOWNLOAD_NONE,                   
    OM_DOWNLOAD_ERROR,                  
    OM_DOWNLOAD_PROGRESS,               
    OM_DOWNLOAD_COMPLETE,               
    OM_DOWNLOAD_CANCELLED,              
} OM_DOWNLOAD_STATUS;
OM_EXPORT int OmWaitForDownload(int deviceId, OM_DOWNLOAD_STATUS *downloadStatus, int *downloadValue);
OM_EXPORT int OmCancelDownload(int deviceId);
OM_EXPORT const char *OmErrorString(int status);
OM_EXPORT OM_DATETIME OmDateTimeFromString(const char *value);
OM_EXPORT char *OmDateTimeToString(OM_DATETIME value, char *buffer);
typedef void * OmReaderHandle;
OM_EXPORT OmReaderHandle OmReaderOpen(const char *binaryFilename);
OM_EXPORT int OmReaderDataRange(OmReaderHandle reader, int *dataBlockSize, int *dataOffsetBlocks, int *dataNumBlocks, OM_DATETIME *startTime, OM_DATETIME *endTime);
OM_EXPORT const char *OmReaderMetadata(OmReaderHandle reader, int *deviceId, unsigned int *sessionId);
OM_EXPORT int OmReaderDataBlockPosition(OmReaderHandle reader);
OM_EXPORT int OmReaderDataBlockSeek(OmReaderHandle reader, int dataBlockNumber);
OM_EXPORT int OmReaderNextBlock(OmReaderHandle reader);
OM_EXPORT short *OmReaderBuffer(OmReaderHandle reader);
OM_EXPORT OM_DATETIME OmReaderTimestamp(OmReaderHandle reader, int index, unsigned short *fractional);
typedef enum
{
    OM_VALUE_DEVICEID = 3, 
    OM_VALUE_SESSIONID = 4, 
    OM_VALUE_SEQUENCEID = 5, 
    OM_VALUE_LIGHT = 7,                 
    OM_VALUE_TEMPERATURE = 8,           
    OM_VALUE_EVENTS = 9, 
    OM_VALUE_BATTERY = 10, 
    OM_VALUE_SAMPLERATE = 11,
    OM_VALUE_LIGHT_LOG10LUXTIMES10POWER3 = 107, 
    OM_VALUE_TEMPERATURE_MC = 108,      
    OM_VALUE_BATTERY_MV = 110,
    OM_VALUE_BATTERY_PERCENT = 210,
	OM_VALUE_AXES = 12,                 
	OM_VALUE_SCALE_ACCEL = 13,          
	OM_VALUE_SCALE_GYRO = 14,           
	OM_VALUE_SCALE_MAG = 15,			
	OM_VALUE_ACCEL_AXIS = 16,			
	OM_VALUE_GYRO_AXIS = 17,			
	OM_VALUE_MAG_AXIS = 18,				
} OM_READER_VALUE_TYPE;
OM_EXPORT int OmReaderGetValue(OmReaderHandle reader, OM_READER_VALUE_TYPE valueType);
typedef struct
{
	unsigned short packetHeader;	    
	unsigned short packetLength;	    
	unsigned char reserved1;            
	unsigned short deviceId;            
	unsigned int sessionId;             
	unsigned short reserved2;           
	OM_DATETIME loggingStartTime;       
	OM_DATETIME loggingEndTime;         
	unsigned int loggingCapacity;       
    unsigned char reserved3[11];        
	unsigned char samplingRate;		    
	unsigned int lastChangeTime;        
	unsigned char firmwareRevision;		
	signed short timeZone;				
    unsigned char reserved4[20];        
    unsigned char annotation[OM_METADATA_SIZE]; 
    unsigned char reserved[512];        
} OM_READER_HEADER_PACKET;
OM_EXPORT OM_READER_HEADER_PACKET *OmReaderRawHeaderPacket(OmReaderHandle reader);
typedef struct
{
	unsigned short packetHeader;	    
	unsigned short packetLength;	    
	unsigned short deviceFractional;	
    unsigned int sessionId;			    
    unsigned int sequenceId;		    
    OM_DATETIME timestamp;			    
	unsigned short light;			    
	unsigned short temperature;		    
	unsigned char  events;			    
	unsigned char  battery;			    
	unsigned char  sampleRate;		    
	unsigned char  numAxesBPS;		    
	signed short   timestampOffset;	    
    unsigned short sampleCount;		    
	unsigned char rawSampleData[480];   
	unsigned short checksum;            
} OM_READER_DATA_PACKET;
OM_EXPORT OM_READER_DATA_PACKET *OmReaderRawDataPacket(OmReaderHandle reader);
OM_EXPORT void OmReaderClose(OmReaderHandle reader);