bindings/python-untested/pylibomapi.py


# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 991
if _libs["omapi"].has("OmWaitForDownload", "cdecl"):
    OmWaitForDownload = _libs["omapi"].get("OmWaitForDownload", "cdecl")
    OmWaitForDownload.argtypes = [c_int, POINTER(OM_DOWNLOAD_STATUS), POINTER(c_int)]
    OmWaitForDownload.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1001
if _libs["omapi"].has("OmCancelDownload", "cdecl"):
    OmCancelDownload = _libs["omapi"].get("OmCancelDownload", "cdecl")
    OmCancelDownload.argtypes = [c_int]
    OmCancelDownload.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1044
if _libs["omapi"].has("OmErrorString", "cdecl"):
    OmErrorString = _libs["omapi"].get("OmErrorString", "cdecl")
    OmErrorString.argtypes = [c_int]
    OmErrorString.restype = c_char_p

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1099
if _libs["omapi"].has("OmDateTimeFromString", "cdecl"):
    OmDateTimeFromString = _libs["omapi"].get("OmDateTimeFromString", "cdecl")
    OmDateTimeFromString.argtypes = [String]
    OmDateTimeFromString.restype = OM_DATETIME

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1103
if _libs["omapi"].has("OmDateTimeToString", "cdecl"):
    OmDateTimeToString = _libs["omapi"].get("OmDateTimeToString", "cdecl")
    OmDateTimeToString.argtypes = [OM_DATETIME, String]
    if sizeof(c_int) == sizeof(c_void_p):
        OmDateTimeToString.restype = ReturnString
    else:
        OmDateTimeToString.restype = String
        OmDateTimeToString.errcheck = ReturnString

OmReaderHandle = POINTER(None)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1130

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1161
if _libs["omapi"].has("OmReaderOpen", "cdecl"):
    OmReaderOpen = _libs["omapi"].get("OmReaderOpen", "cdecl")
    OmReaderOpen.argtypes = [String]
    OmReaderOpen.restype = OmReaderHandle

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1174
if _libs["omapi"].has("OmReaderDataRange", "cdecl"):
    OmReaderDataRange = _libs["omapi"].get("OmReaderDataRange", "cdecl")
    OmReaderDataRange.argtypes = [OmReaderHandle, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(OM_DATETIME), POINTER(OM_DATETIME)]
    OmReaderDataRange.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1184
if _libs["omapi"].has("OmReaderMetadata", "cdecl"):
    OmReaderMetadata = _libs["omapi"].get("OmReaderMetadata", "cdecl")
    OmReaderMetadata.argtypes = [OmReaderHandle, POINTER(c_int), POINTER(c_uint)]
    OmReaderMetadata.restype = c_char_p

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1192
if _libs["omapi"].has("OmReaderDataBlockPosition", "cdecl"):
    OmReaderDataBlockPosition = _libs["omapi"].get("OmReaderDataBlockPosition", "cdecl")
    OmReaderDataBlockPosition.argtypes = [OmReaderHandle]
    OmReaderDataBlockPosition.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1201
if _libs["omapi"].has("OmReaderDataBlockSeek", "cdecl"):
    OmReaderDataBlockSeek = _libs["omapi"].get("OmReaderDataBlockSeek", "cdecl")
    OmReaderDataBlockSeek.argtypes = [OmReaderHandle, c_int]
    OmReaderDataBlockSeek.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1213
if _libs["omapi"].has("OmReaderNextBlock", "cdecl"):
    OmReaderNextBlock = _libs["omapi"].get("OmReaderNextBlock", "cdecl")
    OmReaderNextBlock.argtypes = [OmReaderHandle]
    OmReaderNextBlock.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1225
if _libs["omapi"].has("OmReaderBuffer", "cdecl"):
    OmReaderBuffer = _libs["omapi"].get("OmReaderBuffer", "cdecl")
    OmReaderBuffer.argtypes = [OmReaderHandle]
    OmReaderBuffer.restype = POINTER(c_short)

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1240
if _libs["omapi"].has("OmReaderTimestamp", "cdecl"):
    OmReaderTimestamp = _libs["omapi"].get("OmReaderTimestamp", "cdecl")
    OmReaderTimestamp.argtypes = [OmReaderHandle, c_int, POINTER(c_ushort)]
    OmReaderTimestamp.restype = OM_DATETIME

enum_anon_24 = c_int# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_DEVICEID = 3# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_SESSIONID = 4# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_SEQUENCEID = 5# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_LIGHT = 7# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_TEMPERATURE = 8# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_EVENTS = 9# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_BATTERY = 10# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_SAMPLERATE = 11# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_LIGHT_LOG10LUXTIMES10POWER3 = 107# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_TEMPERATURE_MC = 108# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_BATTERY_MV = 110# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_BATTERY_PERCENT = 210# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_AXES = 12# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_SCALE_ACCEL = 13# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_SCALE_GYRO = 14# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_SCALE_MAG = 15# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_ACCEL_AXIS = 16# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_GYRO_AXIS = 17# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_VALUE_MAG_AXIS = 18# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

OM_READER_VALUE_TYPE = enum_anon_24# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1275

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1287
if _libs["omapi"].has("OmReaderGetValue", "cdecl"):
    OmReaderGetValue = _libs["omapi"].get("OmReaderGetValue", "cdecl")
    OmReaderGetValue.argtypes = [OmReaderHandle, OM_READER_VALUE_TYPE]
    OmReaderGetValue.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1314
class struct_anon_25(Structure):
    pass

struct_anon_25._pack_ = 1
struct_anon_25.__slots__ = [
    'packetHeader',
    'packetLength',
    'reserved1',
    'deviceId',
    'sessionId',
    'reserved2',
    'loggingStartTime',
    'loggingEndTime',
    'loggingCapacity',
    'reserved3',
    'samplingRate',
    'lastChangeTime',
    'firmwareRevision',
    'timeZone',
    'reserved4',
    'annotation',
    'reserved',
]
struct_anon_25._fields_ = [
    ('packetHeader', c_ushort),
    ('packetLength', c_ushort),
    ('reserved1', c_ubyte),
    ('deviceId', c_ushort),
    ('sessionId', c_uint),
    ('reserved2', c_ushort),
    ('loggingStartTime', OM_DATETIME),
    ('loggingEndTime', OM_DATETIME),
    ('loggingCapacity', c_uint),
    ('reserved3', c_ubyte * int(11)),
    ('samplingRate', c_ubyte),
    ('lastChangeTime', c_uint),
    ('firmwareRevision', c_ubyte),
    ('timeZone', c_short),
    ('reserved4', c_ubyte * int(20)),
    ('annotation', c_ubyte * int(448)),
    ('reserved', c_ubyte * int(512)),
]

OM_READER_HEADER_PACKET = struct_anon_25# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1314

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1325
if _libs["omapi"].has("OmReaderRawHeaderPacket", "cdecl"):
    OmReaderRawHeaderPacket = _libs["omapi"].get("OmReaderRawHeaderPacket", "cdecl")
    OmReaderRawHeaderPacket.argtypes = [OmReaderHandle]
    OmReaderRawHeaderPacket.restype = POINTER(OM_READER_HEADER_PACKET)

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1351
class struct_anon_26(Structure):
    pass

struct_anon_26._pack_ = 1
struct_anon_26.__slots__ = [
    'packetHeader',
    'packetLength',
    'deviceFractional',
    'sessionId',
    'sequenceId',
    'timestamp',
    'light',
    'temperature',
    'events',
    'battery',
    'sampleRate',
    'numAxesBPS',
    'timestampOffset',
    'sampleCount',
    'rawSampleData',
    'checksum',
]
struct_anon_26._fields_ = [
    ('packetHeader', c_ushort),
    ('packetLength', c_ushort),
    ('deviceFractional', c_ushort),
    ('sessionId', c_uint),
    ('sequenceId', c_uint),
    ('timestamp', OM_DATETIME),
    ('light', c_ushort),
    ('temperature', c_ushort),
    ('events', c_ubyte),
    ('battery', c_ubyte),
    ('sampleRate', c_ubyte),
    ('numAxesBPS', c_ubyte),
    ('timestampOffset', c_short),
    ('sampleCount', c_ushort),
    ('rawSampleData', c_ubyte * int(480)),
    ('checksum', c_ushort),
]

OM_READER_DATA_PACKET = struct_anon_26# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1351

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1363
if _libs["omapi"].has("OmReaderRawDataPacket", "cdecl"):
    OmReaderRawDataPacket = _libs["omapi"].get("OmReaderRawDataPacket", "cdecl")
    OmReaderRawDataPacket.argtypes = [OmReaderHandle]
    OmReaderRawDataPacket.restype = POINTER(OM_READER_DATA_PACKET)

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 1372
if _libs["omapi"].has("OmReaderClose", "cdecl"):
    OmReaderClose = _libs["omapi"].get("OmReaderClose", "cdecl")
    OmReaderClose.argtypes = [OmReaderHandle]
    OmReaderClose.restype = None

# <built-in>
try:
    __LDBL_MANT_DIG__ = 64
except:
    pass

__const = c_int# <command-line>: 2

# <command-line>: 5
try:
    CTYPESGEN = 1
except:
    pass

# /usr/include/stdc-predef.h: 19
try:
    _STDC_PREDEF_H = 1
except:
    pass

# /usr/include/stdc-predef.h: 38
try:
    __STDC_IEC_559__ = 1
except:
    pass

# /usr/include/stdc-predef.h: 46
try:
    __STDC_IEC_559_COMPLEX__ = 1
except:
    pass

# /usr/include/stdc-predef.h: 58
try:
    __STDC_ISO_10646__ = 201706
except:
    pass

# /usr/include/features.h: 19
try:
    _FEATURES_H = 1
except:
    pass

# /usr/include/features.h: 164
def __GNUC_PREREQ(maj, min):
    return 0

# /usr/include/features.h: 175
def __glibc_clang_prereq(maj, min):
    return 0

# /usr/include/features.h: 227
try:
    _DEFAULT_SOURCE = 1
except:
    pass

# /usr/include/features.h: 235
try:
    __GLIBC_USE_ISOC2X = 0
except:
    pass

# /usr/include/features.h: 241
try:
    __USE_ISOC11 = 1
except:
    pass

# /usr/include/features.h: 248
try:
    __USE_ISOC99 = 1
except:
    pass

# /usr/include/features.h: 255
try:
    __USE_ISOC95 = 1
except:
    pass

# /usr/include/features.h: 276
try:
    __USE_POSIX_IMPLICITLY = 1
except:
    pass

# /usr/include/features.h: 279
try:
    _POSIX_SOURCE = 1
except:
    pass

# /usr/include/features.h: 281
try:
    _POSIX_C_SOURCE = 200809
except:
    pass

# /usr/include/features.h: 316
try:
    __USE_POSIX = 1
except:
    pass

# /usr/include/features.h: 320
try:
    __USE_POSIX2 = 1
except:
    pass

# /usr/include/features.h: 324
try:
    __USE_POSIX199309 = 1
except:
    pass

# /usr/include/features.h: 328
try:
    __USE_POSIX199506 = 1
except:
    pass

# /usr/include/features.h: 332
try:
    __USE_XOPEN2K = 1
except:
    pass

# /usr/include/features.h: 333
# #undef __USE_ISOC95
try:
    del __USE_ISOC95
except NameError:
    pass

# /usr/include/features.h: 334
try:
    __USE_ISOC95 = 1
except:
    pass

# /usr/include/features.h: 335
# #undef __USE_ISOC99
try:
    del __USE_ISOC99
except NameError:
    pass

# /usr/include/features.h: 336
try:
    __USE_ISOC99 = 1
except:
    pass

# /usr/include/features.h: 340
try:
    __USE_XOPEN2K8 = 1
except:
    pass

# /usr/include/features.h: 342
try:
    _ATFILE_SOURCE = 1
except:
    pass

# /usr/include/features.h: 384
try:
    __USE_MISC = 1
except:
    pass

# /usr/include/features.h: 388
try:
    __USE_ATFILE = 1
except:
    pass

# /usr/include/features.h: 403
try:
    __USE_FORTIFY_LEVEL = 0
except:
    pass

# /usr/include/features.h: 411
try:
    __GLIBC_USE_DEPRECATED_GETS = 0
except:
    pass

# /usr/include/features.h: 434
try:
    __GLIBC_USE_DEPRECATED_SCANF = 0
except:
    pass

# /usr/include/features.h: 448
try:
    __GNU_LIBRARY__ = 6
except:
    pass
